src/snapshots/blog__snapshot@2022__07__12__Rustup-1.25.1.html.snap
---
source: src/lib.rs
expression: content
input_file: site/2022/07/12/Rustup-1.25.1.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Announcing Rustup 1.25.1 | Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="Announcing Rustup 1.25.1 | Rust Blog">
     <meta name="twitter:description" content="Empowering everyone to build reliable and efficient software.">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="Announcing Rustup 1.25.1 | Rust Blog" />
    <meta property="og:description" content="Empowering everyone to build reliable and efficient software.">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../images/favicon.svg">
    <link rel="manifest" href="../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/feed.xml" title="Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="Announcing Rustup 1.25.1" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>Announcing Rustup 1.25.1</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">July 12, 2022 &middot; The Rustup Working Group
    
    </div>

    <div class="post">
      <p>The rustup working group is announcing the release of rustup version 1.25.1.
<a href="https://rustup.rs">Rustup</a> is the recommended tool to install <a href="https://www.rust-lang.org">Rust</a>, a
programming language that is empowering everyone to build reliable and
efficient software.</p>
<p>If you have a previous version of rustup installed, getting rustup 1.25.1 is as
easy as stopping any programs which may be using Rustup (e.g. closing your IDE)
and running:</p>
<pre><code>rustup self update
</code></pre>
<p>Rustup will also automatically update itself at the end of a normal toolchain
update:</p>
<pre><code>rustup update
</code></pre>
<p>If you don't have it already, you can <a href="https://rustup.rs">get rustup</a> from the
appropriate page on our website.</p>
<h2><a href="#whats-new-in-rustup-1251" aria-hidden="true" class="anchor" id="whats-new-in-rustup-1251"></a>What's new in rustup 1.25.1</h2>
<p>This version of rustup fixes a regression introduced in the previous release
(1.25.0), which caused some workflows to fail.</p>
<h3><a href="#regression-in-nested-cargo-invocations-with-different-toolchains" aria-hidden="true" class="anchor" id="regression-in-nested-cargo-invocations-with-different-toolchains"></a>Regression in nested Cargo invocations with different toolchains</h3>
<p>When you invoke Rust or Cargo installed by rustup, you're not running them
directly. Instead, you run <a href="https://rust-lang.github.io/rustup/concepts/proxies.html">rustup &quot;proxy&quot; binaries</a>, whose job is to
detect the right toolchain (parsing the <code>+channel</code> CLI argument or using one of
the defaults) and run it.</p>
<p>Running these proxies is not instantaneous though, and for example a <code>cargo build</code> invocation might execute several of them (the initial <code>cargo</code> invocation
plus one <code>rustc</code> for every dependency), slowing down the build.</p>
<p>To improve performance, rustup 1.25.0 changed the proxies code to set the
<a href="https://doc.rust-lang.org/cargo/reference/environment-variables.html#environment-variables-cargo-reads"><code>RUSTC</code> and <code>RUSTDOC</code> environment variables</a> when missing, which
instructed Cargo to skip the proxies and invoke the binaries defined in those
variables directly. This provided a performance gain when building crates with
lots of dependencies.</p>
<p>Unfortunately this change broke some users of rustup, who did something like:</p>
<ul>
<li>
<p>The first Cargo invocation (for example an extension, an alias or an
integration test) uses toolchain <code>foo</code>, setting the <code>RUSTC</code> and <code>RUSTDOC</code>
environment variables pointing to that toolchain.</p>
</li>
<li>
<p>The first invocation calls Cargo again, but this time using toolchain <code>bar</code>
(for example <code>cargo +bar build</code>). This does <strong>not</strong> set the <code>RUSTC</code> and
<code>RUSTDOC</code> environment variables pointing to <code>bar</code>, as those variables are
already present.</p>
</li>
<li>
<p>The second invocation of Cargo then invokes rustc by using the <code>RUSTC</code>
environment variable and skipping the proxy, which results in the <code>foo</code>
toolchain being invoked. Previous versions of rustup invoked the proxy
instead, which would correctly detect and use the <code>bar</code> toolchain.</p>
</li>
</ul>
<p>Rustup 1.25.1 fixes this regression by reverting the change. The rustup working
group is discussing in <a href="https://github.com/rust-lang/rustup/issues/3035">issue #3035</a> plans to re-introduce the change in
a future release while avoiding breakage.</p>
<h2><a href="#thanks" aria-hidden="true" class="anchor" id="thanks"></a>Thanks</h2>
<p>Thanks again to all the contributors who made rustup 1.25.1 possible!</p>
<ul>
<li>Daniel Silverstone (kinnison)</li>
<li>Robert Collins (rbtcollins)</li>
<li>Jynn Nelson (jyn514)</li>
<li>Pietro Albini (pietroalbini)</li>
</ul>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../scripts/highlight.js"></script>
  </body>
</html>
